--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.2.1'
+        classpath 'com.google.gms:google-services:4.1.0'
     }
 }
 
@@ -20,7 +20,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "https://jitpack.io" }    }
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+          }
 }
 
 task clean(type: Delete) {
